samples/_failures_safe/1761656218_0dce64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc40ebdc.c: In function ‘main’:
./samples/SAFE/__tmp_dc40ebdc.c:152:12: error: missing terminating " character
  152 |     printf("2.
      |            ^~~
./samples/SAFE/__tmp_dc40ebdc.c:152:5: error: expected expression at end of input
  152 |     printf("2.
      |     ^~~~~~
./samples/SAFE/__tmp_dc40ebdc.c:152:5: error: expected declaration or statement at end of input
